# ProjetArchitecture

./: .gitinigore  CMakeLists.txt  README.md
assets/shaders/: NightVision.frag  NightVision.vert  deform.vert  target.frag  target.vert
docs/: Dia Archi.dia  Sujet.md
include/SuperOpenGL/: ColorImage.hpp  Face.hpp  FragmentShader.hpp  Image.hpp  Maths.hpp  NormalCalculation.hpp  Object.hpp  OpenMPNormalCalculation.hpp  PThreadNormalCalculation.hpp  Program.hpp  SequentialNormalCalculation.hpp  Shader.hpp  Texture.hpp  TextureCoordinates.hpp  Toolbox.hpp  Vector.hpp  Vertex.hpp  VertexShader.hpp  Window.hpp
include/app/: Game.hpp  MainWindow.hpp  Projectile.hpp  Target.hpp  View.hpp
src/: CMakeLists.txt
src/SuperOpenGL/: CMakeLists.txt  ColorImage.cpp  Face.cpp  FragmentShader.cpp  Image.cpp  Maths.cpp  NormalCalculation.cpp  Object.cpp  OpenMPNormalCalculation.cpp  PThreadNormalCalculation.cpp  Program.cpp  SequentialNormalCalculation.cpp  Shader.cpp  Texture.cpp  TextureCoordinates.cpp  Toolbox.cpp  Vector.cpp  Vertex.cpp  VertexShader.cpp  Window.cpp
src/app/: CMakeLists.txt  Game.cpp  MainWindow.cpp  Projectile.cpp  Target.cpp  View.cpp  main.cpp
